add run create test

--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,7 @@
     },
     "autoload": {
         "psr-4": {
-            "Qase\\API\\": "src/"
+            "Qase\\Client\\": "src/"
         }
     },
     "autoload-dev": {
