--- a/composer.json
+++ b/composer.json
@@ -16,18 +16,18 @@
         "tms",
         "api",
         "rest",
+        "http",
         "openapi",
-        "client",
         "php",
-        "sdk"
+        "client"
     ],
     "require": {
         "php": "^7.4 || ^8.0",
         "ext-curl": "*",
         "ext-json": "*",
         "ext-mbstring": "*",
-        "guzzlehttp/guzzle": "^6.5",
-        "guzzlehttp/psr7": "^1.6.1"
+        "guzzlehttp/guzzle": "^6.5 || ^7.3",
+        "guzzlehttp/psr7": "^1.6 || ^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0 || ^9.0",
@@ -40,5 +40,8 @@
     },
     "autoload-dev": {
         "psr-4": { "Qase\\Client\\Test\\" : "test/" }
+    },
+    "scripts": {
+        "test": "phpunit"
     }
 }
