--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0 || ^9.0",
-    "friendsofphp/php-cs-fixer": "^2.12"
+    "friendsofphp/php-cs-fixer": "^2.12",
+    "roave/security-advisories": "dev-latest"
   },
   "autoload": {
     "psr-4": {
