--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,9 @@
     "guzzlehttp/psr7": "^1.6 || ^2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.0 || ^9.0",
     "friendsofphp/php-cs-fixer": "^2.12",
+    "phpstan/phpstan": "^1.3",
+    "phpunit/phpunit": "^8.0 || ^9.0",
     "roave/security-advisories": "dev-latest"
   },
   "autoload": {
