--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
     "friendsofphp/php-cs-fixer": "^2.12",
     "phpstan/phpstan": "^1.3",
     "phpunit/phpunit": "^8.0 || ^9.0",
-    "roave/security-advisories": "dev-latest"
+    "roave/security-advisories": "dev-latest",
+    "slevomat/coding-standard": "^7.0"
   },
   "autoload": {
     "psr-4": {
@@ -50,5 +51,10 @@
   },
   "scripts": {
     "test": "phpunit"
+  },
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
   }
 }
