--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     "phpstan/phpstan": "^1.3",
     "phpunit/phpunit": "^8.0 || ^9.0",
     "roave/security-advisories": "dev-latest",
-    "slevomat/coding-standard": "^7.0"
+    "slevomat/coding-standard": "^7.0",
+    "squizlabs/php_codesniffer": "^3.6"
   },
   "autoload": {
     "psr-4": {
