--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,8 @@
     "phpunit/phpunit": "^8.0 || ^9.0",
     "roave/security-advisories": "dev-latest",
     "slevomat/coding-standard": "^7.0",
-    "squizlabs/php_codesniffer": "^3.6"
+    "squizlabs/php_codesniffer": "^3.6",
+    "vimeo/psalm": "^4.18"
   },
   "autoload": {
     "psr-4": {
@@ -55,6 +56,7 @@
   },
   "config": {
     "allow-plugins": {
+      "composer/package-versions-deprecated": true,
       "dealerdirect/phpcodesniffer-composer-installer": true
     }
   }
