--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,9 @@
     "allow-plugins": {
       "composer/package-versions-deprecated": true,
       "dealerdirect/phpcodesniffer-composer-installer": true
-    }
+    },
+    "optimize-autoloader": true,
+    "preferred-install": { "*": "dist" },
+    "sort-packages": true
   }
 }
