--- a/composer.json
+++ b/composer.json
@@ -1,66 +1,68 @@
 {
-  "name": "qase/api",
-  "description": "Qase TMS API client.",
-  "homepage": "https://developers.qase.io",
-  "type": "library",
-  "license": "Apache-2.0",
-  "authors": [
-    {
-      "name": "Kamil Samigullin",
-      "email": "kamil@samigullin.info"
+    "name": "qase/api",
+    "description": "Qase TMS API client.",
+    "homepage": "https://developers.qase.io",
+    "type": "library",
+    "license": "Apache-2.0",
+    "authors": [
+        {
+            "name": "Kamil Samigullin",
+            "email": "kamil@samigullin.info"
+        },
+        {
+            "name": "Sergey Skaridov",
+            "email": "s.skaridov@gmail.com"
+        }
+    ],
+    "keywords": [
+        "qase",
+        "tms",
+        "api",
+        "rest",
+        "http",
+        "openapi",
+        "php",
+        "client"
+    ],
+    "require": {
+        "php": "^7.4 || ^8.0",
+        "ext-curl": "*",
+        "ext-json": "*",
+        "ext-mbstring": "*",
+        "guzzlehttp/guzzle": "^6.5 || ^7.3",
+        "guzzlehttp/psr7": "^1.6 || ^2.0"
     },
-    {
-      "name": "Sergey Skaridov",
-      "email": "s.skaridov@gmail.com"
-    }
-  ],
-  "keywords": [
-    "qase",
-    "tms",
-    "api",
-    "rest",
-    "http",
-    "openapi",
-    "php",
-    "client"
-  ],
-  "require": {
-    "php": "^7.4 || ^8.0",
-    "ext-curl": "*",
-    "ext-json": "*",
-    "ext-mbstring": "*",
-    "guzzlehttp/guzzle": "^6.5 || ^7.3",
-    "guzzlehttp/psr7": "^1.6 || ^2.0"
-  },
-  "require-dev": {
-    "friendsofphp/php-cs-fixer": "^2.12",
-    "phpstan/phpstan": "^1.3",
-    "phpunit/phpunit": "^8.0 || ^9.0",
-    "roave/security-advisories": "dev-latest",
-    "slevomat/coding-standard": "^7.0",
-    "squizlabs/php_codesniffer": "^3.6",
-    "vimeo/psalm": "^4.18"
-  },
-  "autoload": {
-    "psr-4": {
-      "Qase\\Client\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Qase\\Client\\Test\\": "test/"
-    }
-  },
-  "scripts": {
-    "test": "phpunit"
-  },
-  "config": {
-    "allow-plugins": {
-      "composer/package-versions-deprecated": true,
-      "dealerdirect/phpcodesniffer-composer-installer": true
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.12",
+        "phpstan/phpstan": "^1.3",
+        "phpunit/phpunit": "^8.0 || ^9.0",
+        "roave/security-advisories": "dev-latest",
+        "slevomat/coding-standard": "^7.0",
+        "squizlabs/php_codesniffer": "^3.6",
+        "vimeo/psalm": "^4.18"
     },
-    "optimize-autoloader": true,
-    "preferred-install": { "*": "dist" },
-    "sort-packages": true
-  }
+    "autoload": {
+        "psr-4": {
+            "Qase\\Client\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Qase\\Client\\Test\\": "test/"
+        }
+    },
+    "scripts": {
+        "test": "phpunit"
+    },
+    "config": {
+        "allow-plugins": {
+            "composer/package-versions-deprecated": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        },
+        "optimize-autoloader": true,
+        "preferred-install": {
+            "*": "dist"
+        },
+        "sort-packages": true
+    }
 }
